objects/Exception_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Acceptable_trustee_or_servicer__c</fullName>
        <label>Acceptable Trustee or Servicer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_pace_jurisdiction__c</fullName>
        <label>Approved Pace Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bond_Indenture_Agreement_or_similar__c</fullName>
        <label>Bond Indenture Agreement - or Similar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Combined_LTV_LiTV_under_100_percent__c</fullName>
        <inlineHelpText>Combined LTV + LiTV &lt;=100%</inlineHelpText>
        <label>LTV plus LiTV  under  100 percent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_prop_taxes_and_prior_3_years__c</fullName>
        <label>Current Prop Taxes and Prior 3 Years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUL_greater_than_weight_avg_life_of_bond__c</fullName>
        <inlineHelpText>EST USEFUL LIFE &gt; WEIGHT AVG LIFE OF BOND</inlineHelpText>
        <label>EUL greater than Weight Avg Life of Bond</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_of_involuntary_liens__c</fullName>
        <label>Free of Involuntary Liens</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Improvements_Qualified__c</fullName>
        <label>Improvements Qualified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Improvments_approved_by_program__c</fullName>
        <label>Improvments Approved by Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mortgage_current__c</fullName>
        <label>Mortgage Current</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mortgage_holder_consent__c</fullName>
        <label>Mortgage Holder Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mortgage_ltv_less_than_or_equal_to_80__c</fullName>
        <inlineHelpText>MORTGAGE LTV &lt; =80%</inlineHelpText>
        <label>Mortgage LTV under 80 percent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Exception Criteria</relationshipLabel>
        <relationshipName>Exception_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PTV_5__c</fullName>
        <inlineHelpText>MORTGAGE LTV &lt; =80%</inlineHelpText>
        <label>PTV under 5 percent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Satisfactory_Environmental_clearance__c</fullName>
        <label>Satisfactory Environmental Clearance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Items_from_DRL_received__c</fullName>
        <label>Standard Items from DRL Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Property_type__c</fullName>
        <label>Standard Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_assessment_recorded__c</fullName>
        <label>Tax Assessment Recorded</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unqualified_bond_counsel_opinion__c</fullName>
        <label>Unqualified Bond Counsel Opinion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified_savings__c</fullName>
        <label>Verified Savings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>contractual_agreement_to_pace_assessemen__c</fullName>
        <label>Contractual Agreement to PACE Assemt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>litv_under_20_percent__c</fullName>
        <inlineHelpText>LITV &lt;=20%</inlineHelpText>
        <label>LITV under 20 percent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <label>Exception Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Exception Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>